renaming classes/variables from mojang mappings